Steer clear of g++ scoping bug in range-based for loop.

With g++, the scope of the per-element local variable currently
(g++-4.8.1) and incorrectly extends over the generator/range
expression also,

  https://gcc.gnu.org/bugzilla/show_bug.cgi?id=54430

Rename the loop variable in CachedMatchedPropertiesHashTraits's
traceInCollection() to avoid running into the bug.

R=haraken
BUG=

Review URL: https://codereview.chromium.org/646013002

git-svn-id: svn://svn.chromium.org/blink/trunk@183574 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: 0aadd0cbf49989601f291ec098aab6e73b87e4b5